<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.15</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>main.cl</groupId>
	<artifactId>dagserver</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<name>dagserver</name>
	<description>dagserver</description>
	<properties>
		<java.version>17</java.version>
		<jacoco.path>${basedir}/target/jacoco_report</jacoco.path>
		<sonar.coverage.jacoco.xmlReportPaths>${basedir}/target/jacoco_report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.exclusions>
			**/repositories/entities/**,
			**/infra/adapters/operators/**
		</sonar.exclusions>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>          
        </dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-quartz</artifactId>
		</dependency>
		<dependency>
			<groupId>net.bull.javamelody</groupId>
			<artifactId>javamelody-spring-boot-starter</artifactId>
			<version>1.95.0</version>
		</dependency>
		<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
		</dependency>
		<dependency>
		  <groupId>javax.annotation</groupId>
		  <artifactId>javax.annotation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.mchange</groupId>
		    <artifactId>c3p0</artifactId>
		    <version>0.9.5.2</version>
		</dependency>
		<dependency>
		    <groupId>com.graphql-java</groupId>
		    <artifactId>graphql-java-tools</artifactId>
		    <version>5.2.4</version>
		</dependency>
		<dependency>
		    <groupId>com.graphql-java</groupId>
		    <artifactId>graphql-java-servlet</artifactId>
		    <version>6.1.3</version>
		</dependency>
		<dependency>
		    <groupId>org.jgrapht</groupId>
		    <artifactId>jgrapht-core</artifactId>
		    <version>1.0.1</version>
		</dependency>
       
		<dependency>
		    <groupId>commons-dbcp</groupId>
		    <artifactId>commons-dbcp</artifactId>
		    <version>1.2.2</version>
		</dependency>
		<dependency>
		    <groupId>commons-dbutils</groupId>
		    <artifactId>commons-dbutils</artifactId>
		    <version>1.7</version>
		</dependency>
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		</dependency>
	  	<dependency>
		    <groupId>org.flywaydb</groupId>
		    <artifactId>flyway-core</artifactId>
		    <version>4.2.0</version>
		</dependency>
		<dependency>
		  <groupId>com.github.mwiede</groupId>
		  <artifactId>jsch</artifactId>
		  <version>0.2.12</version>
		</dependency>
		<dependency>
		    <groupId>com.auth0</groupId>
		    <artifactId>java-jwt</artifactId>
		    <version>3.10.2</version>
		</dependency>
		<dependency>
		    <groupId>org.json</groupId>
		    <artifactId>json</artifactId>
		    <version>20220924</version>
		</dependency>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		</dependency>
		<dependency>
		  <groupId>net.bytebuddy</groupId>
		  <artifactId>byte-buddy</artifactId>
		  <version>1.14.5</version>
		</dependency>
		<dependency>
		    <groupId>org.ow2.asm</groupId>
		    <artifactId>asm</artifactId>
		    <version>9.5</version>
		</dependency>
		<dependency>
		    <groupId>net.bytebuddy</groupId>
		    <artifactId>byte-buddy-agent</artifactId>
		    <version>1.14.5</version>
		</dependency>
		<dependency>
		    <groupId>org.reflections</groupId>
		    <artifactId>reflections</artifactId> 
		    <version>0.10.2</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.groovy</groupId>
		    <artifactId>groovy</artifactId>
		    <version>4.0.13</version>
		</dependency>
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-core</artifactId>
		    <scope>test</scope>
		</dependency>

		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		</dependency>
		
		
		
		<!-- SmtpClient -->
	  	<dependency>
				  <groupId>com.sun.mail</groupId>
				  <artifactId>javax.mail</artifactId>
				  <version>1.5.2</version>
		</dependency>
		<dependency>
				  <groupId>javax.mail</groupId>
				  <artifactId>javax.mail-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>smtp</artifactId>
			<version>1.6.3</version>
		</dependency>
		<!-- apache commons-net -->
		<dependency>
		    <groupId>commons-net</groupId>
		    <artifactId>commons-net</artifactId>
		    <version>3.9.0</version>
		</dependency>
		<!-- Samba2Connector -->
	  	<dependency>
			  <groupId>com.hierynomus</groupId>
			  <artifactId>smbj</artifactId>
			  <version>0.10.0</version>
		</dependency>
		

	    
		<dependency>
		    <groupId>fr.brouillard.oss.security.xhub</groupId>
		    <artifactId>xhub4j-core</artifactId>
		    <version>1.1.0</version>
		</dependency>


		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.13.0</version>
		</dependency>

		<dependency>
		    <groupId>com.linkedin.cytodynamics</groupId>
		    <artifactId>cytodynamics-nucleus</artifactId>
		    <version>0.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.3.0</version>
		</dependency>
		<dependency>
		  <groupId>com.rabbitmq</groupId>
		  <artifactId>amqp-client</artifactId>
		  <version>5.18.0</version>
		</dependency>

		<dependency>
		    <groupId>com.github.plexpt</groupId>
		    <artifactId>chatgpt</artifactId>
		    <version>4.0.1</version>
		    <exclusions>
				<exclusion>
		            <groupId>ch.qos.logback</groupId>
		            <artifactId>logback-classic</artifactId>
		        </exclusion>	
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>org.mongodb</groupId>
		    <artifactId>mongodb-driver-sync</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>redis.clients</groupId>
		    <artifactId>jedis</artifactId>
		    <version>4.3.1</version>
		</dependency>



		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <version>2.2.224</version>
		</dependency>

		
		    <dependency>
		      <groupId>com.lowagie</groupId>
		      <artifactId>itext</artifactId>
		      <version>2.1.7</version>
		    </dependency>

		<dependency>
		    <groupId>org.glassfish.jaxb</groupId>
		    <artifactId>jaxb-runtime</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.javassist</groupId>
		    <artifactId>javassist</artifactId>
		    <version>3.25.0-GA</version>
		</dependency>
		<dependency>
		    <groupId>org.mapdb</groupId>
		    <artifactId>mapdb</artifactId>
		    <version>3.0.10</version>
		</dependency>
		
	</dependencies>



          
    <build>
  
		<testSourceDirectory>src/main/test</testSourceDirectory>
		<resources>
			 <resource>
		     	<directory>src/main/resources</directory>
		     </resource>	
		</resources>
		<sourceDirectory>src/main/java</sourceDirectory>
		
		<plugins>
	
	<plugin>
      <artifactId>maven-surefire-plugin</artifactId>
      <!-- latest version (2.20.1) does not work well with JUnit5 -->
      <version>2.19.1</version>
      <dependencies>
        <dependency>
          <groupId>org.junit.platform</groupId>
          <artifactId>junit-platform-surefire-provider</artifactId>
          <version>1.0.3</version>
        </dependency>
        <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
          <version>5.0.3</version>
        </dependency>
      </dependencies>
    </plugin>
			
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			
			 <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
			                <outputDirectory>${jacoco.path}</outputDirectory>
			            </configuration>
                    </execution>
                </executions>
            </plugin>
			
			<plugin>
        <groupId>com.github.eirslett</groupId>
        <artifactId>frontend-maven-plugin</artifactId>
        <version>1.13.4</version>
        <configuration>
                <workingDirectory>front</workingDirectory>
        </configuration>
        <executions>
                <execution>
                        <id>install node and npm</id>
                        <goals>
                            <goal>install-node-and-npm</goal>
                        </goals>
                        <configuration>
	                        <nodeVersion>v16.13.0</nodeVersion>
	                        <npmVersion>6.14.11</npmVersion>
	                    </configuration>
                </execution>
				<execution>
                    <id>npm install</id>
                    <goals>
                        <goal>npm</goal>
                    </goals>
                    <configuration>
                        <arguments>install</arguments>
                    </configuration>
                </execution>
	            <execution>
				    <id>npm run build</id>
				    <goals>
				        <goal>npm</goal>
				    </goals>
				    <phase>generate-resources</phase>
				    <configuration>
				        <arguments>run build</arguments>
				    </configuration>
				</execution>
        </executions>
       </plugin>
			
			
		</plugins>
	</build>
	

</project>
